[tool.poetry]
name = "pyargwriter"
version = "1.0.0"
description = "Automatically generates ArgumentParser setups for Python classes and their methods."
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyargwriter = "pyargwriter.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pyaml = "^23.12.0"
black = "^23.12.1"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
